Complete AquaSutra Ocean Safety Platform with authentication and role-based access

--- a/index.html
+++ b/index.html
@@ -404,8 +404,12 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <!-- Authentication System -->
     <script src="auth.js"></script>
+    <!-- Authentication Guard -->
+    <script src="auth-guard.js"></script>
     <script src="script.js"></script>
     <script src="app.js"></script>
+    <!-- Role-based Navigation -->
+    <script src="role-navigation.js"></script>
     <!-- Enhanced Integration Script -->
     <script src="enhanced-integration.js"></script>
 </body>
